definição do swagger
