# src/models/BadRequestModel.ts
@@ -1,0 +1,5 @@
+export default interface BadRequestModel {
+    success: false,
+    errorMessage: null,
+    data: any
+}
