# src/models/ResponseModel.ts
@@ -1,0 +1,5 @@
+export default interface ResponseModel {
+    success: boolean,
+    errorMessage: null,
+    data: any
+}
